stage0/tests/snapshots/program__tests_fixtures_programs_imported_syn_0213_record_in_list.snap
---
source: tests/fixtures.rs
expression: transcript
---
fixture: tests/fixtures/programs/imported/syn/0213_record_in_list.ml

compile:
status: success
stdout:
<empty>
stderr:
<empty>

run:
status: success
stdout:
[Point { x: 1 }, Point { x: 2 }]
stderr:
<empty>
