stage0/tests/snapshots/program__tests_fixtures_programs_imported_typ_0003_annotated_value_float.snap
---
source: tests/fixtures.rs
expression: transcript
---
fixture: tests/fixtures/programs/imported/typ/0003_annotated_value_float.ml

compile:
status: success
stdout:
<empty>
stderr:
<empty>

run:
status: success
stdout:
2.0
stderr:
<empty>
