stage0/tests/snapshots/program__tests_fixtures_programs_imported_typ_0007_annotated_value_string.snap
---
source: tests/fixtures.rs
expression: transcript
---
fixture: tests/fixtures/programs/imported/typ/0007_annotated_value_string.ml

compile:
status: success
stdout:
<empty>
stderr:
<empty>

run:
status: success
stdout:
typed
stderr:
<empty>
