stage0/tests/snapshots/program__tests_fixtures_programs_imported_typ_0008_annotated_value_tuple.snap
---
source: tests/fixtures.rs
expression: transcript
---
fixture: tests/fixtures/programs/imported/typ/0008_annotated_value_tuple.ml

compile:
status: success
stdout:
<empty>
stderr:
<empty>

run:
status: success
stdout:
(0, true)
stderr:
<empty>
