stage0/tests/snapshots/program__tests_fixtures_programs_imported_typ_0015_const_bool_true.snap
---
source: tests/fixtures.rs
expression: transcript
---
fixture: tests/fixtures/programs/imported/typ/0015_const_bool_true.ml

compile:
status: success
stdout:
<empty>
stderr:
<empty>

run:
status: success
stdout:
true
stderr:
<empty>
