stage0/tests/snapshots/program__tests_fixtures_programs_imported_typ_0017_const_char_z.snap
---
source: tests/fixtures.rs
expression: transcript
---
fixture: tests/fixtures/programs/imported/typ/0017_const_char_z.ml

compile:
status: success
stdout:
<empty>
stderr:
<empty>

run:
status: success
stdout:
z
stderr:
<empty>
