stage0/tests/snapshots/program__tests_fixtures_programs_imported_typ_0019_const_float_zero.snap
---
source: tests/fixtures.rs
expression: transcript
---
fixture: tests/fixtures/programs/imported/typ/0019_const_float_zero.ml

compile:
status: success
stdout:
<empty>
stderr:
<empty>

run:
status: success
stdout:
0.0
stderr:
<empty>
