stage0/tests/snapshots/program__tests_fixtures_programs_imported_typ_0028_const_string_word.snap
---
source: tests/fixtures.rs
expression: transcript
---
fixture: tests/fixtures/programs/imported/typ/0028_const_string_word.ml

compile:
status: success
stdout:
<empty>
stderr:
<empty>

run:
status: success
stdout:
typ
stderr:
<empty>
