stage0/tests/snapshots/program__tests_fixtures_programs_imported_typ_0029_const_tuple_int_bool.snap
---
source: tests/fixtures.rs
expression: transcript
---
fixture: tests/fixtures/programs/imported/typ/0029_const_tuple_int_bool.ml

compile:
status: success
stdout:
<empty>
stderr:
<empty>

run:
status: success
stdout:
(0, true)
stderr:
<empty>
